--- a/developer-documentation/package.json
+++ b/developer-documentation/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "type": "module",
   "scripts": {
-    "clean": "rm -rf pnpm-lock.yaml node_modules/ dist/",
+    "clean": "rm -rf pnpm-lock.yaml node_modules/ dist/ docs/.vuepress/.cache docs/.vuepress/.temp",
     "dev:open": "vuepress dev docs --port 8082 --open",
     "docs:build": "vuepress build docs",
     "docs:clean-dev": "vuepress dev docs --clean-cache",
