--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev:open": "pnpm --stream --parallel -r --filter=!vue-box run dev:open",
     "install:offline": "pnpm install --offline",
     "package:sort": "npx sort-package-json && pnpm --stream --parallel -r --filter=!vue-box run package:sort",
-    "package:update": "npx npm-check-updates && ncu --interactive && (cd typescript-utilities && pnpm run package:update) && (cd design-system && pnpm run package:update) && (cd developer-documentation && pnpm run package:update) && (cd storybookcase && pnpm run package:update)"
+    "package:update": "npx npm-check-updates && ncu --interactive && (cd typescript-utilities && pnpm run package:update) && (cd hyper-system && pnpm run package:update) && (cd design-system && pnpm run package:update) && (cd developer-documentation && pnpm run package:update) && (cd storybookcase && pnpm run package:update)"
   },
   "devDependencies": {
     "sort-package-json": "^2.14.0"
