--- a/storybookcase/tsconfig.eslint.json
+++ b/storybookcase/tsconfig.eslint.json
@@ -7,11 +7,11 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "noEmit": true,
-    "baseUrl": ".",
+    "baseUrl": "."
   },
   "include": [
-    "library.ts",
-    
+    "index.ts",
+
     "./cypress.config.ts",
     "./eslint.config.ts",
     "./vite.config.ts",
@@ -23,9 +23,6 @@
     "cypress/**/*",
     "cypress/**/*.vue",
     "scripts/**/*.mjs"
-    
   ],
-  "exclude": [
-    "./vite.config.ts.timestamp-**.mjs"
-  ]
+  "exclude": ["./vite.config.ts.timestamp-**.mjs"]
 }
